--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
 
+    repositories {
+        flatDir{
+            dirs'libs'
+        }
+    }
+
     compileOptions {
-
         sourceCompatibility JavaVersion.VERSION_1_8
-
         targetCompatibility JavaVersion.VERSION_1_8
-
     }
 
     compileSdkVersion 28
@@ -32,6 +35,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    //启用导入的arr文件
+    implementation (name:'base-adapter-library-release',ext:'aar')
+    implementation (name:'baseadapter-recyclerview-release',ext:'aar')
 
     implementation('com.github.bumptech.glide:glide:4.8.0') {
         exclude group: "com.android.support"
